@@ -22,7 +22,7 @@ E(OP_DeleteSpawn)
 E(OP_WearChange)
 E(OP_Action)
 E(OP_BecomeTrader)
-
+E(OP_PetBuffWindow)
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
 D(OP_CharacterCreate)
