@@ -233,6 +233,7 @@ OP_MobHealth=0x47ea					# C
 OP_InitialMobHealth=0x2d25			# C
 OP_TargetHoTT=0x3ec7				# C
 OP_TargetBuffs=0x3df8
+OP_BuffRemoveRequest=0x6f9d
 OP_DeleteSpawn=0x3164				# C
 OP_AutoAttack=0x3d86				# C
 OP_AutoAttack2=0x4ca1				# C
